lex.output
Terminaux inutilisés dans la grammaire

    tERROR


Grammaire

    0 $accept: totals $end

    1 totals: total
    2       | totals total

    3 total: tVOID tID tLPAR arguments tRPAR tLBRACE structure tRBRACE
    4      | tINT tID tLPAR arguments tRPAR tLBRACE structure retour tRBRACE

    5 retour: tRETURN variable tSEMI

    6 arguments: argument
    7          | arguments tCOMMA argument
    8          | tVOID

    9 argument: tINT tID

   10 structure: contenu structure
   11          | contenu

   12 contenu: action
   13        | Sicomplet
   14        | tandis

   15 Sicomplet: si
   16          | si sinon

   17 $@1: %empty

   18 tandis: tWHILE tLPAR condition tRPAR tLBRACE $@1 structure tRBRACE

   19 $@2: %empty

   20 sinon: tELSE tLBRACE $@2 structure tRBRACE

   21 $@3: %empty

   22 si: tIF tLPAR condition tRPAR tLBRACE $@3 structure tRBRACE

   23 condition: condition tOR condition
   24          | condition tAND condition
   25          | condition tLE condition
   26          | condition tGE condition
   27          | condition tEQ condition
   28          | condition tNE condition
   29          | condition tGT condition
   30          | condition tLT condition
   31          | variable
   32          | tNOT variable
   33          | tNOT tLPAR condition tRPAR

   34 action: newVariable tSEMI
   35       | assignation tSEMI
   36       | afficher tSEMI

   37 newVariable: tINT valeur
   38            | tINT valeur tASSIGN calcul

   39 valeur: tID
   40       | valeur tCOMMA tID

   41 assignation: tID tASSIGN calcul

   42 afficher: tPRINT tLPAR tID tRPAR

   43 variable: tID
   44         | tNB
   45         | fonction

   46 calcul: tID
   47       | tNB
   48       | calcul tDIV calcul
   49       | calcul tMUL calcul
   50       | calcul tSUB calcul
   51       | calcul tADD calcul

   52 fonction: tID tLPAR agrvs tRPAR

   53 agrvs: agrv
   54      | agrvs tCOMMA agrv

   55 agrv: calcul


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tID <s> (258) 3 4 9 39 40 41 42 43 46 52
    tNB <s> (259) 44 47
    tIF (260) 22
    tELSE (261) 20
    tWHILE (262) 18
    tPRINT (263) 42
    tRETURN (264) 5
    tINT (265) 4 9 37 38
    tVOID (266) 3 8
    tCOMMA (267) 7 40 54
    tSEMI (268) 5 34 35 36
    tRPAR (269) 3 4 18 22 33 42 52
    tLPAR (270) 3 4 18 22 33 42 52
    tLBRACE (271) 3 4 18 20 22
    tRBRACE (272) 3 4 18 20 22
    tNOT (273) 32 33
    tOR (274) 23
    tAND (275) 24
    tASSIGN (276) 38 41
    tLE (277) 25
    tGE (278) 26
    tEQ (279) 27
    tNE (280) 28
    tGT (281) 29
    tLT (282) 30
    tDIV (283) 48
    tMUL (284) 49
    tSUB (285) 50
    tADD (286) 51
    tERROR (287)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (33)
        à gauche: 0
    totals (34)
        à gauche: 1 2
        à droite: 0 2
    total (35)
        à gauche: 3 4
        à droite: 1 2
    retour (36)
        à gauche: 5
        à droite: 4
    arguments (37)
        à gauche: 6 7 8
        à droite: 3 4 7
    argument (38)
        à gauche: 9
        à droite: 6 7
    structure (39)
        à gauche: 10 11
        à droite: 3 4 10 18 20 22
    contenu (40)
        à gauche: 12 13 14
        à droite: 10 11
    Sicomplet (41)
        à gauche: 15 16
        à droite: 13
    tandis (42)
        à gauche: 18
        à droite: 14
    $@1 (43)
        à gauche: 17
        à droite: 18
    sinon (44)
        à gauche: 20
        à droite: 16
    $@2 (45)
        à gauche: 19
        à droite: 20
    si (46)
        à gauche: 22
        à droite: 15 16
    $@3 (47)
        à gauche: 21
        à droite: 22
    condition (48)
        à gauche: 23 24 25 26 27 28 29 30 31 32 33
        à droite: 18 22 23 24 25 26 27 28 29 30 33
    action (49)
        à gauche: 34 35 36
        à droite: 12
    newVariable (50)
        à gauche: 37 38
        à droite: 34
    valeur (51)
        à gauche: 39 40
        à droite: 37 38 40
    assignation (52)
        à gauche: 41
        à droite: 35
    afficher (53)
        à gauche: 42
        à droite: 36
    variable (54)
        à gauche: 43 44 45
        à droite: 5 31 32
    calcul (55)
        à gauche: 46 47 48 49 50 51
        à droite: 38 41 48 49 50 51 55
    fonction (56)
        à gauche: 52
        à droite: 45
    agrvs (57)
        à gauche: 53 54
        à droite: 52 54
    agrv (58)
        à gauche: 55
        à droite: 53 54


État 0

    0 $accept: . totals $end

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    totals  aller à l'état 3
    total   aller à l'état 4


État 1

    4 total: tINT . tID tLPAR arguments tRPAR tLBRACE structure retour tRBRACE

    tID  décalage et aller à l'état 5


État 2

    3 total: tVOID . tID tLPAR arguments tRPAR tLBRACE structure tRBRACE

    tID  décalage et aller à l'état 6


État 3

    0 $accept: totals . $end
    2 totals: totals . total

    $end   décalage et aller à l'état 7
    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    total  aller à l'état 8


État 4

    1 totals: total .

    $défaut  réduction par utilisation de la règle 1 (totals)


État 5

    4 total: tINT tID . tLPAR arguments tRPAR tLBRACE structure retour tRBRACE

    tLPAR  décalage et aller à l'état 9


État 6

    3 total: tVOID tID . tLPAR arguments tRPAR tLBRACE structure tRBRACE

    tLPAR  décalage et aller à l'état 10


État 7

    0 $accept: totals $end .

    $défaut  accepter


État 8

    2 totals: totals total .

    $défaut  réduction par utilisation de la règle 2 (totals)


État 9

    4 total: tINT tID tLPAR . arguments tRPAR tLBRACE structure retour tRBRACE

    tINT   décalage et aller à l'état 11
    tVOID  décalage et aller à l'état 12

    arguments  aller à l'état 13
    argument   aller à l'état 14


État 10

    3 total: tVOID tID tLPAR . arguments tRPAR tLBRACE structure tRBRACE

    tINT   décalage et aller à l'état 11
    tVOID  décalage et aller à l'état 12

    arguments  aller à l'état 15
    argument   aller à l'état 14


État 11

    9 argument: tINT . tID

    tID  décalage et aller à l'état 16


État 12

    8 arguments: tVOID .

    $défaut  réduction par utilisation de la règle 8 (arguments)


État 13

    4 total: tINT tID tLPAR arguments . tRPAR tLBRACE structure retour tRBRACE
    7 arguments: arguments . tCOMMA argument

    tCOMMA  décalage et aller à l'état 17
    tRPAR   décalage et aller à l'état 18


État 14

    6 arguments: argument .

    $défaut  réduction par utilisation de la règle 6 (arguments)


État 15

    3 total: tVOID tID tLPAR arguments . tRPAR tLBRACE structure tRBRACE
    7 arguments: arguments . tCOMMA argument

    tCOMMA  décalage et aller à l'état 17
    tRPAR   décalage et aller à l'état 19


État 16

    9 argument: tINT tID .

    $défaut  réduction par utilisation de la règle 9 (argument)


État 17

    7 arguments: arguments tCOMMA . argument

    tINT  décalage et aller à l'état 11

    argument  aller à l'état 20


État 18

    4 total: tINT tID tLPAR arguments tRPAR . tLBRACE structure retour tRBRACE

    tLBRACE  décalage et aller à l'état 21


État 19

    3 total: tVOID tID tLPAR arguments tRPAR . tLBRACE structure tRBRACE

    tLBRACE  décalage et aller à l'état 22


État 20

    7 arguments: arguments tCOMMA argument .

    $défaut  réduction par utilisation de la règle 7 (arguments)


État 21

    4 total: tINT tID tLPAR arguments tRPAR tLBRACE . structure retour tRBRACE

    tID     décalage et aller à l'état 23
    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27

    structure    aller à l'état 28
    contenu      aller à l'état 29
    Sicomplet    aller à l'état 30
    tandis       aller à l'état 31
    si           aller à l'état 32
    action       aller à l'état 33
    newVariable  aller à l'état 34
    assignation  aller à l'état 35
    afficher     aller à l'état 36


État 22

    3 total: tVOID tID tLPAR arguments tRPAR tLBRACE . structure tRBRACE

    tID     décalage et aller à l'état 23
    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27

    structure    aller à l'état 37
    contenu      aller à l'état 29
    Sicomplet    aller à l'état 30
    tandis       aller à l'état 31
    si           aller à l'état 32
    action       aller à l'état 33
    newVariable  aller à l'état 34
    assignation  aller à l'état 35
    afficher     aller à l'état 36


État 23

   41 assignation: tID . tASSIGN calcul

    tASSIGN  décalage et aller à l'état 38


État 24

   22 si: tIF . tLPAR condition tRPAR tLBRACE $@3 structure tRBRACE

    tLPAR  décalage et aller à l'état 39


État 25

   18 tandis: tWHILE . tLPAR condition tRPAR tLBRACE $@1 structure tRBRACE

    tLPAR  décalage et aller à l'état 40


État 26

   42 afficher: tPRINT . tLPAR tID tRPAR

    tLPAR  décalage et aller à l'état 41


État 27

   37 newVariable: tINT . valeur
   38            | tINT . valeur tASSIGN calcul

    tID  décalage et aller à l'état 42

    valeur  aller à l'état 43


État 28

    4 total: tINT tID tLPAR arguments tRPAR tLBRACE structure . retour tRBRACE

    tRETURN  décalage et aller à l'état 44

    retour  aller à l'état 45


État 29

   10 structure: contenu . structure
   11          | contenu .

    tID     décalage et aller à l'état 23
    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 11 (structure)

    structure    aller à l'état 46
    contenu      aller à l'état 29
    Sicomplet    aller à l'état 30
    tandis       aller à l'état 31
    si           aller à l'état 32
    action       aller à l'état 33
    newVariable  aller à l'état 34
    assignation  aller à l'état 35
    afficher     aller à l'état 36


État 30

   13 contenu: Sicomplet .

    $défaut  réduction par utilisation de la règle 13 (contenu)


État 31

   14 contenu: tandis .

    $défaut  réduction par utilisation de la règle 14 (contenu)


État 32

   15 Sicomplet: si .
   16          | si . sinon

    tELSE  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 15 (Sicomplet)

    sinon  aller à l'état 48


État 33

   12 contenu: action .

    $défaut  réduction par utilisation de la règle 12 (contenu)


État 34

   34 action: newVariable . tSEMI

    tSEMI  décalage et aller à l'état 49


État 35

   35 action: assignation . tSEMI

    tSEMI  décalage et aller à l'état 50


État 36

   36 action: afficher . tSEMI

    tSEMI  décalage et aller à l'état 51


État 37

    3 total: tVOID tID tLPAR arguments tRPAR tLBRACE structure . tRBRACE

    tRBRACE  décalage et aller à l'état 52


État 38

   41 assignation: tID tASSIGN . calcul

    tID  décalage et aller à l'état 53
    tNB  décalage et aller à l'état 54

    calcul  aller à l'état 55


État 39

   22 si: tIF tLPAR . condition tRPAR tLBRACE $@3 structure tRBRACE

    tID   décalage et aller à l'état 56
    tNB   décalage et aller à l'état 57
    tNOT  décalage et aller à l'état 58

    condition  aller à l'état 59
    variable   aller à l'état 60
    fonction   aller à l'état 61


État 40

   18 tandis: tWHILE tLPAR . condition tRPAR tLBRACE $@1 structure tRBRACE

    tID   décalage et aller à l'état 56
    tNB   décalage et aller à l'état 57
    tNOT  décalage et aller à l'état 58

    condition  aller à l'état 62
    variable   aller à l'état 60
    fonction   aller à l'état 61


État 41

   42 afficher: tPRINT tLPAR . tID tRPAR

    tID  décalage et aller à l'état 63


État 42

   39 valeur: tID .

    $défaut  réduction par utilisation de la règle 39 (valeur)


État 43

   37 newVariable: tINT valeur .
   38            | tINT valeur . tASSIGN calcul
   40 valeur: valeur . tCOMMA tID

    tCOMMA   décalage et aller à l'état 64
    tASSIGN  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 37 (newVariable)


État 44

    5 retour: tRETURN . variable tSEMI

    tID  décalage et aller à l'état 56
    tNB  décalage et aller à l'état 57

    variable  aller à l'état 66
    fonction  aller à l'état 61


État 45

    4 total: tINT tID tLPAR arguments tRPAR tLBRACE structure retour . tRBRACE

    tRBRACE  décalage et aller à l'état 67


État 46

   10 structure: contenu structure .

    $défaut  réduction par utilisation de la règle 10 (structure)


État 47

   20 sinon: tELSE . tLBRACE $@2 structure tRBRACE

    tLBRACE  décalage et aller à l'état 68


État 48

   16 Sicomplet: si sinon .

    $défaut  réduction par utilisation de la règle 16 (Sicomplet)


État 49

   34 action: newVariable tSEMI .

    $défaut  réduction par utilisation de la règle 34 (action)


État 50

   35 action: assignation tSEMI .

    $défaut  réduction par utilisation de la règle 35 (action)


État 51

   36 action: afficher tSEMI .

    $défaut  réduction par utilisation de la règle 36 (action)


État 52

    3 total: tVOID tID tLPAR arguments tRPAR tLBRACE structure tRBRACE .

    $défaut  réduction par utilisation de la règle 3 (total)


État 53

   46 calcul: tID .

    $défaut  réduction par utilisation de la règle 46 (calcul)


État 54

   47 calcul: tNB .

    $défaut  réduction par utilisation de la règle 47 (calcul)


État 55

   41 assignation: tID tASSIGN calcul .
   48 calcul: calcul . tDIV calcul
   49       | calcul . tMUL calcul
   50       | calcul . tSUB calcul
   51       | calcul . tADD calcul

    tDIV  décalage et aller à l'état 69
    tMUL  décalage et aller à l'état 70
    tSUB  décalage et aller à l'état 71
    tADD  décalage et aller à l'état 72

    $défaut  réduction par utilisation de la règle 41 (assignation)


État 56

   43 variable: tID .
   52 fonction: tID . tLPAR agrvs tRPAR

    tLPAR  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 43 (variable)


État 57

   44 variable: tNB .

    $défaut  réduction par utilisation de la règle 44 (variable)


État 58

   32 condition: tNOT . variable
   33          | tNOT . tLPAR condition tRPAR

    tID    décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tLPAR  décalage et aller à l'état 74

    variable  aller à l'état 75
    fonction  aller à l'état 61


État 59

   22 si: tIF tLPAR condition . tRPAR tLBRACE $@3 structure tRBRACE
   23 condition: condition . tOR condition
   24          | condition . tAND condition
   25          | condition . tLE condition
   26          | condition . tGE condition
   27          | condition . tEQ condition
   28          | condition . tNE condition
   29          | condition . tGT condition
   30          | condition . tLT condition

    tRPAR  décalage et aller à l'état 76
    tOR    décalage et aller à l'état 77
    tAND   décalage et aller à l'état 78
    tLE    décalage et aller à l'état 79
    tGE    décalage et aller à l'état 80
    tEQ    décalage et aller à l'état 81
    tNE    décalage et aller à l'état 82
    tGT    décalage et aller à l'état 83
    tLT    décalage et aller à l'état 84


État 60

   31 condition: variable .

    $défaut  réduction par utilisation de la règle 31 (condition)


État 61

   45 variable: fonction .

    $défaut  réduction par utilisation de la règle 45 (variable)


État 62

   18 tandis: tWHILE tLPAR condition . tRPAR tLBRACE $@1 structure tRBRACE
   23 condition: condition . tOR condition
   24          | condition . tAND condition
   25          | condition . tLE condition
   26          | condition . tGE condition
   27          | condition . tEQ condition
   28          | condition . tNE condition
   29          | condition . tGT condition
   30          | condition . tLT condition

    tRPAR  décalage et aller à l'état 85
    tOR    décalage et aller à l'état 77
    tAND   décalage et aller à l'état 78
    tLE    décalage et aller à l'état 79
    tGE    décalage et aller à l'état 80
    tEQ    décalage et aller à l'état 81
    tNE    décalage et aller à l'état 82
    tGT    décalage et aller à l'état 83
    tLT    décalage et aller à l'état 84


État 63

   42 afficher: tPRINT tLPAR tID . tRPAR

    tRPAR  décalage et aller à l'état 86


État 64

   40 valeur: valeur tCOMMA . tID

    tID  décalage et aller à l'état 87


État 65

   38 newVariable: tINT valeur tASSIGN . calcul

    tID  décalage et aller à l'état 53
    tNB  décalage et aller à l'état 54

    calcul  aller à l'état 88


État 66

    5 retour: tRETURN variable . tSEMI

    tSEMI  décalage et aller à l'état 89


État 67

    4 total: tINT tID tLPAR arguments tRPAR tLBRACE structure retour tRBRACE .

    $défaut  réduction par utilisation de la règle 4 (total)


État 68

   20 sinon: tELSE tLBRACE . $@2 structure tRBRACE

    $défaut  réduction par utilisation de la règle 19 ($@2)

    $@2  aller à l'état 90


État 69

   48 calcul: calcul tDIV . calcul

    tID  décalage et aller à l'état 53
    tNB  décalage et aller à l'état 54

    calcul  aller à l'état 91


État 70

   49 calcul: calcul tMUL . calcul

    tID  décalage et aller à l'état 53
    tNB  décalage et aller à l'état 54

    calcul  aller à l'état 92


État 71

   50 calcul: calcul tSUB . calcul

    tID  décalage et aller à l'état 53
    tNB  décalage et aller à l'état 54

    calcul  aller à l'état 93


État 72

   51 calcul: calcul tADD . calcul

    tID  décalage et aller à l'état 53
    tNB  décalage et aller à l'état 54

    calcul  aller à l'état 94


État 73

   52 fonction: tID tLPAR . agrvs tRPAR

    tID  décalage et aller à l'état 53
    tNB  décalage et aller à l'état 54

    calcul  aller à l'état 95
    agrvs   aller à l'état 96
    agrv    aller à l'état 97


État 74

   33 condition: tNOT tLPAR . condition tRPAR

    tID   décalage et aller à l'état 56
    tNB   décalage et aller à l'état 57
    tNOT  décalage et aller à l'état 58

    condition  aller à l'état 98
    variable   aller à l'état 60
    fonction   aller à l'état 61


État 75

   32 condition: tNOT variable .

    $défaut  réduction par utilisation de la règle 32 (condition)


État 76

   22 si: tIF tLPAR condition tRPAR . tLBRACE $@3 structure tRBRACE

    tLBRACE  décalage et aller à l'état 99


État 77

   23 condition: condition tOR . condition

    tID   décalage et aller à l'état 56
    tNB   décalage et aller à l'état 57
    tNOT  décalage et aller à l'état 58

    condition  aller à l'état 100
    variable   aller à l'état 60
    fonction   aller à l'état 61


État 78

   24 condition: condition tAND . condition

    tID   décalage et aller à l'état 56
    tNB   décalage et aller à l'état 57
    tNOT  décalage et aller à l'état 58

    condition  aller à l'état 101
    variable   aller à l'état 60
    fonction   aller à l'état 61


État 79

   25 condition: condition tLE . condition

    tID   décalage et aller à l'état 56
    tNB   décalage et aller à l'état 57
    tNOT  décalage et aller à l'état 58

    condition  aller à l'état 102
    variable   aller à l'état 60
    fonction   aller à l'état 61


État 80

   26 condition: condition tGE . condition

    tID   décalage et aller à l'état 56
    tNB   décalage et aller à l'état 57
    tNOT  décalage et aller à l'état 58

    condition  aller à l'état 103
    variable   aller à l'état 60
    fonction   aller à l'état 61


État 81

   27 condition: condition tEQ . condition

    tID   décalage et aller à l'état 56
    tNB   décalage et aller à l'état 57
    tNOT  décalage et aller à l'état 58

    condition  aller à l'état 104
    variable   aller à l'état 60
    fonction   aller à l'état 61


État 82

   28 condition: condition tNE . condition

    tID   décalage et aller à l'état 56
    tNB   décalage et aller à l'état 57
    tNOT  décalage et aller à l'état 58

    condition  aller à l'état 105
    variable   aller à l'état 60
    fonction   aller à l'état 61


État 83

   29 condition: condition tGT . condition

    tID   décalage et aller à l'état 56
    tNB   décalage et aller à l'état 57
    tNOT  décalage et aller à l'état 58

    condition  aller à l'état 106
    variable   aller à l'état 60
    fonction   aller à l'état 61


État 84

   30 condition: condition tLT . condition

    tID   décalage et aller à l'état 56
    tNB   décalage et aller à l'état 57
    tNOT  décalage et aller à l'état 58

    condition  aller à l'état 107
    variable   aller à l'état 60
    fonction   aller à l'état 61


État 85

   18 tandis: tWHILE tLPAR condition tRPAR . tLBRACE $@1 structure tRBRACE

    tLBRACE  décalage et aller à l'état 108


État 86

   42 afficher: tPRINT tLPAR tID tRPAR .

    $défaut  réduction par utilisation de la règle 42 (afficher)


État 87

   40 valeur: valeur tCOMMA tID .

    $défaut  réduction par utilisation de la règle 40 (valeur)


État 88

   38 newVariable: tINT valeur tASSIGN calcul .
   48 calcul: calcul . tDIV calcul
   49       | calcul . tMUL calcul
   50       | calcul . tSUB calcul
   51       | calcul . tADD calcul

    tDIV  décalage et aller à l'état 69
    tMUL  décalage et aller à l'état 70
    tSUB  décalage et aller à l'état 71
    tADD  décalage et aller à l'état 72

    $défaut  réduction par utilisation de la règle 38 (newVariable)


État 89

    5 retour: tRETURN variable tSEMI .

    $défaut  réduction par utilisation de la règle 5 (retour)


État 90

   20 sinon: tELSE tLBRACE $@2 . structure tRBRACE

    tID     décalage et aller à l'état 23
    tIF     décalage et aller à l'état 24
    tWHILE  décalage et aller à l'état 25
    tPRINT  décalage et aller à l'état 26
    tINT    décalage et aller à l'état 27

    structure    aller à l'état 109
    contenu      aller à l'état 29
    Sicomplet    aller à l'état 30
    tandis       aller à l'état 31
    si           aller à l'état 32
    action       aller à l'état 33
    newVariable  aller à l'état 34
    assignation  aller à l'état 35
    afficher     aller à l'état 36


État 91

   48 calcul: calcul . tDIV calcul
   48       | calcul tDIV calcul .
   49       | calcul . tMUL calcul
   50       | calcul . tSUB calcul
   51       | calcul . tADD calcul

    $défaut  réduction par utilisation de la règle 48 (calcul)


État 92

   48 calcul: calcul . tDIV calcul
   49       | calcul . tMUL calcul
   49       | calcul tMUL calcul .
   50       | calcul . tSUB calcul
   51       | calcul . tADD calcul

    $défaut  réduction par utilisation de la règle 49 (calcul)


État 93

   48 calcul: calcul . tDIV calcul
   49       | calcul . tMUL calcul
   50       | calcul . tSUB calcul
   50       | calcul tSUB calcul .
   51       | calcul . tADD calcul

    tDIV  décalage et aller à l'état 69
    tMUL  décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 50 (calcul)


État 94

   48 calcul: calcul . tDIV calcul
   49       | calcul . tMUL calcul
   50       | calcul . tSUB calcul
   51       | calcul . tADD calcul
   51       | calcul tADD calcul .

    tDIV  décalage et aller à l'état 69
    tMUL  décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 51 (calcul)


État 95

   48 calcul: calcul . tDIV calcul
   49       | calcul . tMUL calcul
   50       | calcul . tSUB calcul
   51       | calcul . tADD calcul
   55 agrv: calcul .

    tDIV  décalage et aller à l'état 69
    tMUL  décalage et aller à l'état 70
    tSUB  décalage et aller à l'état 71
    tADD  décalage et aller à l'état 72

    $défaut  réduction par utilisation de la règle 55 (agrv)


État 96

   52 fonction: tID tLPAR agrvs . tRPAR
   54 agrvs: agrvs . tCOMMA agrv

    tCOMMA  décalage et aller à l'état 110
    tRPAR   décalage et aller à l'état 111


État 97

   53 agrvs: agrv .

    $défaut  réduction par utilisation de la règle 53 (agrvs)


État 98

   23 condition: condition . tOR condition
   24          | condition . tAND condition
   25          | condition . tLE condition
   26          | condition . tGE condition
   27          | condition . tEQ condition
   28          | condition . tNE condition
   29          | condition . tGT condition
   30          | condition . tLT condition
   33          | tNOT tLPAR condition . tRPAR

    tRPAR  décalage et aller à l'état 112
    tOR    décalage et aller à l'état 77
    tAND   décalage et aller à l'état 78
    tLE    décalage et aller à l'état 79
    tGE    décalage et aller à l'état 80
    tEQ    décalage et aller à l'état 81
    tNE    décalage et aller à l'état 82
    tGT    décalage et aller à l'état 83
    tLT    décalage et aller à l'état 84


État 99

   22 si: tIF tLPAR condition tRPAR tLBRACE . $@3 structure tRBRACE

    $défaut  réduction par utilisation de la règle 21 ($@3)

    $@3  aller à l'état 113


État 100

   23 condition: condition . tOR condition
   23          | condition tOR condition .
   24          | condition . tAND condition
   25          | condition . tLE condition
   26          | condition . tGE condition
   27          | condition . tEQ condition
   28          | condition . tNE condition
   29          | condition . tGT condition
   30          | condition . tLT condition

    tLE  décalage et aller à l'état 79
    tGE  décalage et aller à l'état 80
    tEQ  décalage et aller à l'état 81
    tNE  décalage et aller à l'état 82
    tGT  décalage et aller à l'état 83
    tLT  décalage et aller à l'état 84

    $défaut  réduction par utilisation de la règle 23 (condition)


État 101

   23 condition: condition . tOR condition
   24          | condition . tAND condition
   24          | condition tAND condition .
   25          | condition . tLE condition
   26          | condition . tGE condition
   27          | condition . tEQ condition
   28          | condition . tNE condition
   29          | condition . tGT condition
   30          | condition . tLT condition

    tLE  décalage et aller à l'état 79
    tGE  décalage et aller à l'état 80
    tEQ  décalage et aller à l'état 81
    tNE  décalage et aller à l'état 82
    tGT  décalage et aller à l'état 83
    tLT  décalage et aller à l'état 84

    $défaut  réduction par utilisation de la règle 24 (condition)


État 102

   23 condition: condition . tOR condition
   24          | condition . tAND condition
   25          | condition . tLE condition
   25          | condition tLE condition .
   26          | condition . tGE condition
   27          | condition . tEQ condition
   28          | condition . tNE condition
   29          | condition . tGT condition
   30          | condition . tLT condition

    $défaut  réduction par utilisation de la règle 25 (condition)


État 103

   23 condition: condition . tOR condition
   24          | condition . tAND condition
   25          | condition . tLE condition
   26          | condition . tGE condition
   26          | condition tGE condition .
   27          | condition . tEQ condition
   28          | condition . tNE condition
   29          | condition . tGT condition
   30          | condition . tLT condition

    $défaut  réduction par utilisation de la règle 26 (condition)


État 104

   23 condition: condition . tOR condition
   24          | condition . tAND condition
   25          | condition . tLE condition
   26          | condition . tGE condition
   27          | condition . tEQ condition
   27          | condition tEQ condition .
   28          | condition . tNE condition
   29          | condition . tGT condition
   30          | condition . tLT condition

    $défaut  réduction par utilisation de la règle 27 (condition)


État 105

   23 condition: condition . tOR condition
   24          | condition . tAND condition
   25          | condition . tLE condition
   26          | condition . tGE condition
   27          | condition . tEQ condition
   28          | condition . tNE condition
   28          | condition tNE condition .
   29          | condition . tGT condition
   30          | condition . tLT condition

    $défaut  réduction par utilisation de la règle 28 (condition)


État 106

   23 condition: condition . tOR condition
   24          | condition . tAND condition
   25          | condition . tLE condition
   26          | condition . tGE condition
   27          | condition . tEQ condition
   28          | condition . tNE condition
   29          | condition . tGT condition
   29          | condition tGT condition .
   30          | condition . tLT condition

    $défaut  réduction par utilisation de la règle 29 (condition)


État 107

   23 condition: condition . tOR condition
   24          | condition . tAND condition
   25          | condition . tLE condition
   26          | condition . tGE condition
   27          | condition . tEQ condition
   28          | condition . tNE condition
   29          | condition . tGT condition
   30          | condition . tLT condition
   30          | condition tLT condition .

    $défaut  réduction par utilisation de la règle 30 (condition)


État 108

   18 tandis: tWHILE tLPAR condition tRPAR tLBRACE . $@1 structure tRBRACE

    $défaut  réduction par utilisation de la règle 17 ($@1)

    $@1  aller à l'état 114


État 109

   20 sinon: tELSE tLBRACE $@2 structure . tRBRACE

    tRBRACE  décalage et aller à l'état 115


État 110

   54 agrvs: agrvs tCOMMA . agrv

    tID  décalage et aller à l'état 53
    tNB  décalage et aller à l'état 54

    calcul  aller à l'état 95
    agrv    aller à l'état 116


État 111

   52 fonction: tID tLPAR agrvs tRPAR .

    $défaut  réduction par utilisation de la règle 52 (fonction)


État 112

   33 condition: tNOT tLPAR condition tRPAR .

    $défaut  réduction par utilisation de la règle 33 (condition)


État 113

   22 si: tIF tLPAR condition tRPAR tLBRACE $@3 . structure tRBRACE
